--- a/frontend/src/app/core/auth/login.component.html
+++ b/frontend/src/app/core/auth/login.component.html
@@ -5,50 +5,15 @@
     <div class="col-lg-4 d-flex align-items-center">
       <mat-card class="cardWithShadow boxed-auth">
         <mat-card-content class="p-32">
-          <div class="text-center">
-<!--            <a [routerLink]="['/dashboard']">-->
-            <a >
-              <img
-                src="./assets/images/logos/dark-logo.svg"
-                class="align-middle m-2"
+          <div class="text-left">
+            <!--            <a [routerLink]="['/dashboard']">-->
+            <a>
+              <img src="./assets/images/svgs/login.svg"
+                class="align-middle m-2 w-50px"
                 alt="logo"
               />
             </a>
           </div>
-
-          <div class="row m-t-24 custom-row">
-            <div class="col-12 col-sm-6">
-              <button mat-stroked-button class="w-100">
-                <div class="d-flex align-items-center">
-                  <img
-                    src="/assets/images/svgs/google-icon.svg"
-                    alt="google"
-                    width="16"
-                    class="m-r-8"
-                  />
-                  Sign in with Google
-                </div>
-              </button>
-            </div>
-            <div class="col-12 col-sm-6">
-              <button
-                mat-stroked-button
-                class="w-100 d-flex align-items-center"
-              >
-                <div class="d-flex align-items-center">
-                  <img
-                    src="/assets/images/svgs/facebook-icon.svg"
-                    alt="facebook"
-                    width="40"
-                    class="m-r-4"
-                  />
-                  Sign in with FB
-                </div>
-              </button>
-            </div>
-          </div>
-
-          <div class="or-border m-t-30">or sign in with</div>
 
           <form class="m-t-30">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
@@ -69,13 +34,9 @@
 
             <div class="d-flex align-items-center m-b-12">
               <mat-checkbox color="primary">Remember this Device</mat-checkbox>
-              <a
-
-                class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14"
-              >Forgot Password ?</a
-              >
+              <a class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password ?</a>
             </div>
-            <a  mat-flat-button color="primary" class="w-100">
+            <a mat-flat-button color="primary" class="w-100">
               Sign In
             </a>
             <!-- input -->
