--- a/frontend/src/app/core/auth/login.component.html
+++ b/frontend/src/app/core/auth/login.component.html
@@ -15,13 +15,13 @@
             </a>
           </div>
 
-          <form class="m-t-30">
+          <form class="m-t-30" formControl="{{form}}" (submit)="submit()">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
             >Username
             </mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput/>
+              <input matInput [name]="'uname'"/>
             </mat-form-field>
             <!-- password -->
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
@@ -29,7 +29,7 @@
             </mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password"/>
+              <input matInput type="password" [name]="'password'"/>
             </mat-form-field>
 
             <div class="d-flex align-items-center m-b-12">
