--- a/frontend/src/app/core/auth/login.component.html
+++ b/frontend/src/app/core/auth/login.component.html
@@ -15,7 +15,7 @@
             </a>
           </div>
 
-          <form class="m-t-30" formControl="{{form}}" (submit)="submit()">
+          <form class="m-t-30">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
             >Username
             </mat-label
