list of competitions - new page

--- a/frontend/src/app/core/admin/start/competition-list.component.html
+++ b/frontend/src/app/core/admin/start/competition-list.component.html
@@ -1,25 +1,21 @@
 <div class="blank-layout-container justify-content-center align-items-center bg-light-primary">
     <div
-            class="position-relative row w-100 h-100 bg-gredient justify-content-center"
-    >
-        <div class="col-lg-4 d-flex align-items-center">
-            <mat-card class="cardWithShadow boxed-auth">
+            class="position-relative row w-100 h-100 bg-gredient justify-content-center">
+        <div class="col-lg-4 d-flex">
+            <mat-card class="cardWithShadow ">
                 <mat-card-content class="p-32">
                     <div class="text-left" style="display: flex;">
                         <!--            <a [routerLink]="['/dashboard']">-->
                         <a>
-                            <img src="./assets/images/svgs/tick-green-icon.svg"
+                            <img src="./assets/images/svgs/list-svgrepo-com.svg"
                                  class="align-middle m-2 w-50px"
                                  alt="logo"
                             />
                         </a>
-                        <h2 style="margin-left: 1rem; margin-top: 1.5rem;">Panel administracyjny</h2>
+                        <h2 style="margin-left: 1rem; margin-top: 1.5rem;">Lista rozgrywek</h2>
                     </div>
                     <a mat-flat-button color="primary" class="w-100">
                         Utwórz nowe rozgrywki
-                    </a>
-                    <a mat-flat-button color="primary" class="w-100" style="margin-top: 1rem;" (click)="openList()">
-                        Przeglądaj istniejace rozgrywki
                     </a>
                 </mat-card-content>
             </mat-card>
