--- a/frontend/src/app/core/admin/main-page/main-page.component.scss
+++ b/frontend/src/app/core/admin/main-page/main-page.component.scss
@@ -2,16 +2,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  padding-top: 10rem;
 }
 
 .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 2px solid black;
   padding: 20px;
   margin: 10px;
   border-radius: 10px;
-  width: 30%;
-  height: 40%;
-  margin-top: 10rem;
+  width: 25%;
+  height: 10rem;
   box-sizing: border-box;
 }
+
+.title {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
