--- a/frontend/src/app/core/admin/main-page/main-page.component.html
+++ b/frontend/src/app/core/admin/main-page/main-page.component.html
@@ -15,8 +15,8 @@
                         </a>
                         <h2 style="margin-left: 1rem; margin-top: 1.5rem;">Panel administracyjny</h2>
                     </div>
-                    <a mat-flat-button color="primary" class="w-100">
-                        Utwórz nowe rozgrywki
+                    <a mat-flat-button color="primary" class="w-100" (click)="openCreator()">
+                        Utwórz nową rozgrywkę
                     </a>
                     <a mat-flat-button color="primary" class="w-100" style="margin-top: 1rem;" (click)="openList()">
                         Przeglądaj istniejace rozgrywki
