--- a/frontend/src/app/core/admin/competition-dashboard/competition-dashboard.component.html
+++ b/frontend/src/app/core/admin/competition-dashboard/competition-dashboard.component.html
@@ -31,7 +31,7 @@
                                 <h2 class="result">{{ match.firstTeamScore }} : {{ match.secondTeamScore }}</h2>
                                 <h2 class="team-name">{{ getTeamById(match.secondTeamId) }}</h2>
                             </div>
-                            <app-match-result [matchId]="match.matchId" (onPredicate)="predicate($event)"></app-match-result>
+                            <app-match-result *ngIf="canPredicate(match.matchId)" [matchId]="match.matchId" (onPredicate)="predicate($event)"></app-match-result>
                             <mat-divider mat-list-item></mat-divider>
                         </mat-action-list>
                     </mat-list>
