--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -22,3 +22,5 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+@import  "@danielmoncada/angular-datetime-picker/assets/style/picker.min.css";
+
